[package]
name = "escrow-mod"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_mod"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version ="0.22.1",features = ["init-if-needed"]}
anchor-spl = "0.22.1"
